--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,18 +1,62 @@
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 <GridPane fx:controller="tk.chaber.triangles_properties.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <TextField  id="value1"
-                GridPane.rowIndex="1"
-                GridPane.columnIndex="1"></TextField>
-    <TextField id="value2"
-               GridPane.rowIndex="2"
-               GridPane.columnIndex="1"></TextField>
-    <TextField id="value3"
-               GridPane.rowIndex="3"
-               GridPane.columnIndex="1"></TextField>
+          xmlns:fx="http://javafx.com/fxml" alignment="center">
+    <HBox spacing="8">
+        <GridPane   prefWidth="500"
+                    vgap="8"
+                    hgap="8">
+            <Label text="Side"
+                   minWidth="50"
+                   GridPane.rowIndex="1"
+                   GridPane.columnIndex="1">
+                    <font>
+                        <Font size="14.0"/>
+                    </font>
+            </Label>
+            <TextField  id="value1"
+                        GridPane.rowIndex="1"
+                        GridPane.columnIndex="2"></TextField>
+            <Label text="Angle 1"
+                   minWidth="50"
+                   GridPane.rowIndex="2"
+                   GridPane.columnIndex="1">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+            <TextField id="value2"
+                       GridPane.rowIndex="2"
+                       GridPane.columnIndex="2"></TextField>
+            <Label text="Angle 2"
+                   minWidth="50"
+                   GridPane.rowIndex="3"
+                   GridPane.columnIndex="1">
+                <font>
+                    <Font size="14.0"/>
+                </font>
+            </Label>
+            <TextField id="value3"
+                       GridPane.rowIndex="3"
+                       GridPane.columnIndex="2"></TextField>
+            <Button prefWidth="500"
+                    GridPane.rowIndex="4"
+                    GridPane.columnIndex="1"
+                    GridPane.columnSpan="2"
+                    onAction="#createTriangle">
+                    Create triangle
+            </Button>
+        </GridPane>
+        <VBox prefWidth="500">
+            <Label text="Hello"></Label>
+            <Label text="Hello"></Label>
+            <Label text="Hello"></Label>
+        </VBox>
+    </HBox>
+
 </GridPane>
